<resources>
    <string name="app_name">Themoviedb</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Serhii Kolisnyk</string>
    <string name="nav_header_subtitle">kolisnyk.sk@gmail.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="typical_error">Something is really bad.</string>
    <string name="please_retry">Please retry</string>
    <string name="retry">RETRY</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="msg_error_emty_holder">There was an error loading data</string>
    <string name="detail">Detail</string>
    <string name="status">Status: %1$s! </string>
    <string name="revenue">Revenue: %1$s $</string>
    <string name="list_empty">List is empty!</string>
    <string name="favorites">Favorites</string>
    <string name="popular_films">Popular films</string>
    <string name="info_heder">This sample app implements MVP architecture using</string>
    <string name="dagger2">Dagger2</string>
    <string name="rxjava">RxJava2</string>
    <string name="rxandroid">RxAndroid</string>
    <string name="retrofit2">Retrofit2</string>
    <string name="glade">Glade</string>
    <string name="realm">Realm</string>

</resources>
